fix layout issue for menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -145,7 +145,7 @@ main {
 }
 
 .menu_toggle.active .menu_hamberg span:nth-child(1) {
-  transform: translateY(9px) rotate(45deg);
+  transform: translateY(10px) rotate(45deg);
 }
 
 .menu_toggle.active .menu_hamberg span:nth-child(3) {
